plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
// Test
    tasks.withType(Test).configureEach { jvmArgs '-Xshare:off' }
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

// Spring Boot Web and JPA dependencies
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
// MariaDB/JDBC driver
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 // Spring Boot DevTools (for development)
    implementation 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JJWT dependency for handling JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'       // JJWT API
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'      // JJWT Implementation
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'   // Jackson support for JJWT

    // Jackson dependency for JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
    // Jackson Databind (serialization/deserialization)
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.0'  // Jackson Annotations (Optional)
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0'  // Jackson Core (Optional)

    // OPENAPI dependency for Swagger documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'

    // Spring Security dependency
    implementation 'org.springframework.boot:spring-boot-starter-security'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {    jvmArgs '-Xshare:off'}
